--- a/src/components/styles.css
+++ b/src/components/styles.css
@@ -33,5 +33,13 @@
     color: white;
     transition: 0.2s all;
     box-shadow: 0 0 10px black;
-    
+}
+
+.input__submit:hover {
+    background-color: #388ae2;
+}
+
+.input__submit:active {
+    transform: scale(0.8);
+    box-shadow: 0 0 5px black;
 }
